[gd_scene load_steps=13 format=3 uid="uid://0lfey5d30t3c"]

[ext_resource type="Script" path="res://player/player.gd" id="1_8nk7a"]
[ext_resource type="Script" path="res://player/ray_cast_3d.gd" id="2_4g8u8"]
[ext_resource type="Texture2D" uid="uid://ck45j4ykjr8pe" path="res://player/hurt.png" id="3_h22eh"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_4rjp7"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_22pax"]

[sub_resource type="Animation" id="Animation_eexkq"]
resource_name = "CrouchToCrawl"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("head:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, -0.3, 0), Vector3(0, -0.8, 0)]
}

[sub_resource type="Animation" id="Animation_gbdd6"]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("head:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_i6l55"]
resource_name = "StandingToCrawl"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("head:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.8, 0)]
}

[sub_resource type="Animation" id="Animation_086ds"]
resource_name = "StandingToCrouch"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("head:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.3, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ru12d"]
_data = {
"CrouchToCrawl": SubResource("Animation_eexkq"),
"RESET": SubResource("Animation_gbdd6"),
"StandingToCrawl": SubResource("Animation_i6l55"),
"StandingToCrouch": SubResource("Animation_086ds")
}

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_wptn4"]
height = 1.5

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_b3qwf"]
radius = 0.4
height = 1.5

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_8nk7a")

[node name="StadingCollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_4rjp7")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_22pax")

[node name="head" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="RayCast3D" type="RayCast3D" parent="head/Camera3D"]
transform = Transform3D(1.00344, 0, 0, 0, 0, -1.00344, 0, 1.00344, 0, 0, 0, 0)
script = ExtResource("2_4g8u8")

[node name="crosshair" type="Label" parent="head/Camera3D"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.5
offset_top = -11.5
offset_right = 2.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "."

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ru12d")
}

[node name="CrouchingCollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.749507, 0)
shape = SubResource("CapsuleShape3D_wptn4")

[node name="CrawlingCollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.4, 0.24)
shape = SubResource("CapsuleShape3D_b3qwf")

[node name="HurtOverley" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = -3.05176e-05
offset_right = 771.0
offset_bottom = 432.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.598786, 0.600098)
texture = ExtResource("3_h22eh")
